--- a/.github/workflows/ci-api.yml
+++ b/.github/workflows/ci-api.yml
@@ -14,7 +14,7 @@ defaults:
 jobs:
   lint-test:
     name: API Lint, Format & Tests
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
 
