--- a/.github/workflows/ci-project-linters.yml
+++ b/.github/workflows/ci-project-linters.yml
@@ -14,7 +14,7 @@ defaults:
 jobs:
   dry-run-project-linters:
     name: Dry run GitHub project linters
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       GH_TOKEN: ${{ secrets.GH_TOKEN_PROJECT_ACCESS }}
       # Test issue with points and sprint values unset
