--- a/.github/workflows/ci-wiki-links.yml
+++ b/.github/workflows/ci-wiki-links.yml
@@ -16,7 +16,7 @@ defaults:
 jobs:
   check-wiki-links:
     name: Check wiki links in SUMMARY.md
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
 
