--- a/.github/workflows/database-migrations.yml
+++ b/.github/workflows/database-migrations.yml
@@ -18,7 +18,7 @@ concurrency: database-migrations-${{ inputs.environment }}
 jobs:
   run-migrations:
     name: Run migrations
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     permissions:
       contents: read
