--- a/.github/workflows/deploy-metabase.yml
+++ b/.github/workflows/deploy-metabase.yml
@@ -18,7 +18,7 @@ concurrency: cd-${{ inputs.environment }}
 jobs:
   deploy:
     name: Deploy
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     permissions:
       contents: read
       id-token: write
