--- a/.github/workflows/send-slack-notification.yml
+++ b/.github/workflows/send-slack-notification.yml
@@ -5,7 +5,7 @@ on: workflow_call
 jobs:
   send-slack-notification:
     name: Send Slack notification on failure
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Send Slack notification
         run: |
