--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -50,6 +50,8 @@ types-requests = "^2.31"
 graphviz = "^0.20.3"
 eralchemy = "^1.5.0"
 
+[tool.poetry.group.tornado.dependencies]
+tornado = "==6.4.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
