--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -13,10 +13,8 @@ FROM python:3.13-slim AS base
 RUN pip install --no-cache-dir poetry==1.5
 
 RUN apt-get update \
-    # Install security updates
-    # https://pythonspeed.com/articles/security-updates-in-docker/
-    && apt-get upgrade --yes \
-    && apt-get install --no-install-recommends --yes \
+    # Remove existing packages before installing their never versions
+    && apt-get remove --yes \
         build-essential \
         libpq-dev \
         postgresql \
