--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,5 +55,5 @@ jobs:
         run: make release-deploy \
           APP_NAME=${{ inputs.app_name }} \
           ENVIRONMENT=${{ inputs.environment }} \
-          DEPLOY_GITHUB_REF=${{ github.ref }} \
+          DEPLOY_GITHUB_REF=${{ github.ref_name }} \
           DEPLOY_GITHUB_SHA=${{ github.sha }}
