--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,4 +52,8 @@ jobs:
           environment: ${{ inputs.environment }}
 
       - name: Deploy release
-        run: make release-deploy APP_NAME=${{ inputs.app_name }} ENVIRONMENT=${{ inputs.environment }}
+        run: make release-deploy \
+          APP_NAME=${{ inputs.app_name }} \
+          ENVIRONMENT=${{ inputs.environment }} \
+          DEPLOY_GITHUB_REF=${{ github.ref_name }} \
+          DEPLOY_GITHUB_SHA=${{ github.sha }}
