Mostly end-to-end connection

--- a/api/local.env
+++ b/api/local.env
@@ -41,10 +41,14 @@ LOG_ENABLE_AUDIT=FALSE
 # The auth token used by the local endpoints
 API_AUTH_TOKEN=LOCAL_AUTH_12345678,LOCAL_AUTH_87654321,LOCAL_1234
 
-LOGIN_GOV_JWK_ENDPOINT=http://mock-oauth2-server:5001/issuer1/jwks
+LOGIN_GOV_CLIENT_ID=local_mock_client_id
+
+LOGIN_GOV_JWK_ENDPOINT=http://host.docker.internal:5001/issuer1/jwks
 LOGIN_GOV_AUTH_ENDPOINT=http://localhost:5001/issuer1/authorize
 LOGIN_GOV_ENDPOINT=http://localhost:5001
-LOGIN_GOV_CLIENT_ID=local_mock_client_id
+
+
+LOGIN_FINAL_DESTINATION=http://localhost:8080/v1/users/login/result
 
 # These should be set in your override.env file
 # which can be created by running `make setup-env-override-file`
