--- a/api/local.env
+++ b/api/local.env
@@ -123,3 +123,15 @@ IS_LOCAL_FOREIGN_TABLE=true
 
 # File path for the export_opportunity_data task
 EXPORT_OPP_DATA_FILE_PATH=/tmp
+
+############################
+# Deploy Metadata
+############################
+
+# These params are set/updated when we deploy the API
+# and are used to add metadata info in various places
+# For local development, just define static values
+
+DEPLOY_GITHUB_REF=main
+DEPLOY_GITHUB_SHA=ffaca647223e0b6e54344122eefa73401f5ec131
+DEPLOY_TIMESTAMP=2024-12-02T21:25:18Z
