[Issue #3066] Expose analytics CLI entry point in Docker (#3085)
Fixes: #3066 
- Edits path to `db-migrate` entry point in `pyproject.toml`
- Edits the `poetry run pip install` to use `--no-cache-dir` and use a
wildcard for the `dist/*.whl` so that users don't have to change that
line if we bump the version

--- a/analytics/Dockerfile
+++ b/analytics/Dockerfile
@@ -115,10 +115,9 @@ RUN poetry install --no-root --only main
 
 # Build the application binary (python wheel) defined in pyproject.toml
 # Note that this will only copy over python files, and files stated in the
-# include section in pyproject.toml. Also note that if you change the name or
-# version section in pyproject.toml, you will need to change the dist/... to match
-# or the application will not build
-RUN poetry build --format wheel && poetry run pip install 'dist/simpler_grants_gov_analytics-0.1.0-py3-none-any.whl'
+# include section in pyproject.toml.
+RUN poetry build --format wheel && \
+  poetry run pip install --no-cache-dir dist/*.whl
 
 # Add project's virtual env to the PATH so we can directly run poetry scripts
 # defiend in pyproject.toml
