--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "node": ">=20.0.0"
   },
   "scripts": {
-    "all-checks": "npm run test && npm run lint && npm run ts:check && npm run build",
+    "all-checks": "npm run lint && npm run ts:check && npm run test && npm run build",
     "build": "next build",
     "dev": "next dev",
     "dev:nr": "NODE_OPTIONS='-r @newrelic/next' next dev",
