--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Back end API for simpler.grants.gov"
 packages = [{ include = "src" }]
 authors = ["Nava Engineering <engineering@navapbc.com>"]
+include = ["newrelic.ini"]
 
 [tool.poetry.dependencies]
 # See /documentation/api/package-depedency-management.md#Upgrading Python
@@ -26,6 +27,7 @@ pydantic-settings = "^2.0.3"
 flask-cors = "^5.0.0"
 opensearch-py = "^2.5.0"
 pyjwt = "^2.9.0"
+newrelic = "10.3.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0.0"
