[Issue #3075] Setup /users/login redirect endpoint for OAuth (#3087)
## Summary
Fixes #3075

### Time to review: __15 mins__

## Changes proposed
Added a new /users/login endpoint that redirects you to the
authorization endpoint for login.gov

Added a to-be-filled out /users/login/callback endpoint to receive the
"response" from login.gov (several tickets will fill out the
implementation in this)

A lot of reconfiguring of mock oauth server to make all this work
locally

## Context for reviewers
This technically makes the login flow run across its entire set of
endpoints, however the bulk of the logic regarding tokens is not yet
included (a lot is implemented in other PRs already).

The general flow of this is:
* A user navigates to the login page
* The user is redirected to the OAuth signin page
* The user fills out the OAuth page and is redirected back to our
/callback endpoint
* The callback endpoint will have the bulk of the logic (users, token
generation, and validation)
* The callback endpoint redirects a user to a final page and passes off
the token

Testing this was.. fun as redirects and Docker make a lot of the paths
constantly differ from each other. It _should_ work in all cases, but I
make no guarantees I didn't miss something.

## Additional information
An example flow with pictures.

A user navigates to the /v1/users/login endpoint:
<img width="761" alt="Screenshot 2024-12-03 at 1 22 24 PM"
src="https://github.com/user-attachments/assets/e770fab4-e151-4416-880f-205daa451ae2">

In this case they can select the link as OpenAPI doesn't handle
redirects and just dumps the redirect HTML into the response section.
The endpoint builds a redirect URL to the OAuth client, and immediately
redirects.

Selecting that link immediately redirects you to the Mock OAuth login
page
<img width="602" alt="Screenshot 2024-12-03 at 1 22 36 PM"
src="https://github.com/user-attachments/assets/31130113-9b69-4c17-bce8-82f57751d

--- a/api/mock-oauth/config.json
+++ b/api/mock-oauth/config.json
@@ -10,8 +10,7 @@
                     "requestParam": "code",
                     "match": "*",
                     "claims": {
-                        "sub": "184c4c61-4a5d-4b5a-b3b9-bb9cfd7fe2ae",
-                        "email": "johns.smith@grant.gov"
+                        "email": "fake_mail@mail.com"
                     }
                 }
             ]
