--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -11,8 +11,4 @@ SENDY_API_KEY=
 SENDY_API_URL=
 SENDY_LIST_ID=
 
-API_URL=http://localhost:8080
-
-# Hardcode public auth key for local to local calls
-# This is also hardcoded and checked-in on the API
-API_AUTH_TOKEN=LOCAL_AUTH_12345678
+API_URL=http://api.simpler.grants.gov
