add analytics db properties to api local.env

--- a/api/local.env
+++ b/api/local.env
@@ -67,6 +67,15 @@ DB_USER=app
 DB_PASSWORD=secret123
 DB_SSL_MODE=allow
 
+# Set ANALYTICS DB_HOST to localhost if accessing a non-dockerized database
+ANALYTICS_DB_HOST=grants-analytics-db
+ANALYTICS_DB_NAME=app
+ANALYTICS_DB_USER=app
+ANALYTICS_DB_PASSWORD=secret123
+ANALYTICS_DB_SSL_MODE=allow
+ANALYTICS_DB_SCHEMA=public
+
+
 # When an error occurs with a SQL query,
 # whether or not to hide the parameters which
 # could contain sensitive information.
