--- a/.github/workflows/ci-project-linters.yml
+++ b/.github/workflows/ci-project-linters.yml
@@ -18,12 +18,15 @@ jobs:
     env:
       GH_TOKEN: ${{ secrets.GH_TOKEN_PROJECT_ACCESS }}
       # Test issue with points and sprint values unset
-      # to be used with set-points-and-sprint.sh test
+      # to be used with set-points-and-sprint.sh test to demonstrate update
       UNSET_ISSUE: "https://github.com/HHS/simpler-grants-gov/issues/1932"
+      # Test issue with points and sprint values unset, but no linked PR,
+      # to be used with set-points-and-sprint.sh test to demonstrate skipping
+      ISSUE_WITHOUT_PR: "https://github.com/HHS/grants-product-and-delivery/issues/261"
     steps:
       - uses: actions/checkout@v4
 
-      - name: Dry run - Set points and sprint field
+      - name: Dry run - Set points and sprint field (update metadata)
         run: |
           ./scripts/set-points-and-sprint.sh \
             --url "${UNSET_ISSUE}" \
@@ -31,4 +34,14 @@ jobs:
             --project 13 \
             --sprint-field "Sprint" \
             --points-field "Story Points" \
+            --dry-run
+
+      - name: Dry run - Set points and sprint field (skip issue because no PR)
+        run: |
+          ./scripts/set-points-and-sprint.sh \
+            --url "${ISSUE_WITHOUT_PR}" \
+            --org "HHS" \
+            --project 17 \
+            --sprint-field "Sprint" \
+            --points-field "Points" \
             --dry-run
