--- a/frontend/package.json
+++ b/frontend/package.json
@@ -81,7 +81,7 @@
     "eslint-plugin-storybook": "^0.9.0",
     "eslint-plugin-testing-library": "^5.11.0",
     "i18next-browser-languagedetector": "^7.0.2",
-    "i18next-http-backend": "^2.2.1",
+    "i18next-http-backend": "^3.0.1",
     "jest": "^29.5.0",
     "jest-axe": "^7.0.0",
     "jest-cli": "^29.5.0",
@@ -97,5 +97,8 @@
     "storybook-react-i18next": "^3.1.7",
     "style-loader": "^3.3.2",
     "typescript": "^5.0.0"
+  },
+  "overrides": {
+    "i18next-http-backend": "^3.0.1"
   }
 }
