move secret to env and set in dev, buttoning up

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -29,3 +29,5 @@ USE_SEARCH_MOCK_DATA=false
 # DO NOT COMMIT THESE VALUES TO GITHUB
 NEW_RELIC_APP_NAME=
 NEW_RELIC_LICENSE_KEY=
+
+SESSION_SECRET=extraSecretSessionSecretValueSssh
