[Issue #3149] Add DEPLOY_WHOAMI to deployment metadata

--- a/api/local.env
+++ b/api/local.env
@@ -140,3 +140,4 @@ EXPORT_OPP_DATA_FILE_PATH=/tmp
 DEPLOY_GITHUB_REF=main
 DEPLOY_GITHUB_SHA=ffaca647223e0b6e54344122eefa73401f5ec131
 DEPLOY_TIMESTAMP=2024-12-02T21:25:18Z
+DEPLOY_WHOAMI=local-developer
