[Issue #3103] Pass client assertion jwt to token endpoint

--- a/api/local.env
+++ b/api/local.env
@@ -56,6 +56,7 @@ LOGIN_FINAL_DESTINATION=http://localhost:8080/v1/users/login/result
 # which can be created by running `make setup-env-override-file`
 API_JWT_PRIVATE_KEY=
 API_JWT_PUBLIC_KEY=
+LOGIN_GOV_CLIENT_ASSERTION_PRIVATE_KEY=
 
 ENABLE_AUTH_ENDPOINT=TRUE
 
