--- a/analytics/pyproject.toml
+++ b/analytics/pyproject.toml
@@ -9,6 +9,7 @@ version = "0.1.0"
 [tool.poetry.scripts]
 analytics = "analytics.cli:app"
 db-migrate = "analytics.cli:migrate_database"
+ingest-opportunity-data = "analytics.cli:ingest_opp_data"
 
 [tool.poetry.dependencies]
 dynaconf = "^3.2.4"
@@ -22,10 +23,10 @@ python = "~3.13"
 slack-sdk = "^3.23.0"
 typer = { extras = ["all"], version = "^0.14.0" }
 sqlalchemy = "^2.0.30"
-psycopg = ">=3.0.7"
 pydantic-settings = "^2.3.4"
 boto3 = "^1.35.56"
 boto3-stubs = "^1.35.56"
+psycopg = "^3.2.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0.0"
