--- a/api/local.env
+++ b/api/local.env
@@ -46,9 +46,7 @@ LOGIN_GOV_CLIENT_ID=local_mock_client_id
 LOGIN_GOV_JWK_ENDPOINT=http://host.docker.internal:5001/issuer1/jwks
 LOGIN_GOV_AUTH_ENDPOINT=http://localhost:5001/issuer1/authorize
 LOGIN_GOV_TOKEN_ENDPOINT=http://host.docker.internal:5001/issuer1/token
-LOGIN_GOV_ENDPOINT=http://localhost:5001
-
-
+LOGIN_GOV_ENDPOINT=http://host.docker.internal:5001/issuer1
 
 LOGIN_FINAL_DESTINATION=http://localhost:8080/v1/users/login/result
 
