add s3 env vars

--- a/analytics/local.env
+++ b/analytics/local.env
@@ -52,3 +52,10 @@ LOG_FORMAT=human-readable
 
 # Change the message length for the human readable formatter
 # LOG_HUMAN_READABLE_FORMATTER__MESSAGE_WIDTH=50
+
+############################
+# S3
+############################
+
+S3_OPPORTUNITY_BUCKET=local-opportunities
+S3_OPPORTUNITY_FILE_PATH=extracts
