--- a/analytics/pyproject.toml
+++ b/analytics/pyproject.toml
@@ -27,6 +27,7 @@ pydantic-settings = "^2.3.4"
 boto3 = "^1.35.56"
 boto3-stubs = "^1.35.56"
 psycopg = "^3.2.3"
+moto = "^5.0.22"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0.0"
