[Issue #3148] Generate extracts of tables for opportunity data (#3153)
## Summary
Fixes #3148

### Time to review: __10 mins__

## Changes proposed
Create a task we can run that will generate CSV extracts for a given set
of tables

## Context for reviewers
This dataset will be a sort of input to an analytics process being
written. We'll pull these extract files and load them into the analytics
database.

This uses pretty routine `copy` commands from Postgres which is very
very efficient at reading/writing from CSV files.
https://www.postgresql.org/docs/current/sql-copy.html

## Additional information
Running `make cmd args="task create-analytics-db-csvs"` locally to get
the script going with ~35k opportunities in my DB takes about 2 seconds
for these 5 tables:
![Screenshot 2024-12-09 at 4 48
06 PM](https://github.com/user-attachments/assets/36dc8df4-41fc-4db4-a715-e240404f2fa7)

Example files generated:

### Opportunity
```csv
opportunity_id,opportunity_number,opportunity_title,agency_code,opportunity_category_id,category_explanation,is_draft,revision_number,modified_comments,publisher_user_id,publisher_profile_id,created_at,updated_at
"1","HHS-OPHS-02-685","Donaldson-Montgomery 2004 award","DOI-BIA","2",,"f","0",,,,"2024-12-09 19:47:53.327412+00","2024-12-09 19:47:53.327412+00"
"2","THUS-824-49","Embassy program for Sport and exercise psychologist in Thailand","DOD-AMRAA","2",,"f","0",,,,"2024-12-09 19:47:53.385385+00","2024-12-09 19:47:53.385385+00"
"3","LEAST-443-18","Embassy program for Multimedia specialist in Bangladesh","USDA-FAS","2",,"f","0",,,,"2024-12-09 19:47:53.423241+00","2024-12-09 19:47:53.423241+00"
"4","HHS-IHS-07-253","Jones and Sons 1999 award","DOD-COE-FW","5","Include while thought.","f","0",,,,"2024-12-09 19:47:53.448716+00","2024-12-09 19:47:53.448716+00"
"5","DOI-USGS1-54-707","Austin Boyd Foundation Grant for cultivate collaborative niches","DOE-NETL","5","Successful.","f","0",,,,"2024-12-09 19:47:53.473957

--- a/api/local.env
+++ b/api/local.env
@@ -130,6 +130,9 @@ IS_LOCAL_FOREIGN_TABLE=true
 # File path for the export_opportunity_data task
 EXPORT_OPP_DATA_FILE_PATH=/tmp
 
+# File path for the create-analytics-db-csvs task
+ANALYTICS_DB_CSV_FILE_PATH=/tmp
+
 ############################
 # Deploy Metadata
 ############################
