[Issue #2653] Add login link

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -20,6 +20,8 @@ API_URL=http://localhost:8080
 # This is also hardcoded and checked-in on the API
 API_AUTH_TOKEN=LOCAL_AUTH_12345678
 
+AUTH_LOGIN_URL=http://localhost:8080/v1/users/login
+
 # Boolean to switch between mock data and live API call data
 # Default is a live API call
 USE_SEARCH_MOCK_DATA=false
