--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -11,4 +11,5 @@ SENDY_API_KEY=
 SENDY_API_URL=
 SENDY_LIST_ID=
 
-API_URL=http://api.simpler.grants.gov
+API_URL=https://api.simpler.grants.gov
+AUTH_LOGIN_URL=https://api.simpler.grants.gov/v1/users/login
