added LOAD_OPPORTUNITY_DATA_FILE_PATH and removed bucket and path prefix

--- a/analytics/local.env
+++ b/analytics/local.env
@@ -57,5 +57,4 @@ LOG_FORMAT=human-readable
 # S3
 ############################
 
-S3_OPPORTUNITY_BUCKET=local-opportunities
-S3_OPPORTUNITY_FILE_PATH_PREFIX=public-extracts
+LOAD_OPPORTUNITY_DATA_FILE_PATH=S3://local-opportunities/public-extracts
