2317/Copy data from grants-db into the opportunity table(s) in the analytics db (#3228)
## Summary
Fixes #{[2317](https://github.com/HHS/simpler-grants-gov/issues/2317)}

### Time to review: __20 mins__

## Changes proposed
New Cli Function to upload opportunity tables into analytics db
S3 configuration to read `csv `opportunity tables 
Add S3 Environment variables 
Mock s3 client for testing
Added fixtures for AWS (From API code), test-schema and
opportunity-tables to aid in testing, scoped to test session.
Added fixture to delete table records after each test
Added opportunity table `csv` files for testing
Added test that checks files were successfully uploaded and records
inserted into test-schema tables



## Context for reviewers
> poetry run pytest
./tests/integrations/extracts/test_load_opportunity_data.py when running
test locally

## Additional information
> Screenshots, GIF demos, code examples or output to help show the
changes working as expected.

--- a/analytics/Makefile
+++ b/analytics/Makefile
@@ -150,6 +150,12 @@ db-migrate:
 	$(POETRY) analytics etl db_migrate
 	@echo "====================================================="
 
+opportunity-load:
+	@echo "=> Ingesting opportunity data into the database"
+	@echo "====================================================="
+	$(POETRY) analytics etl opportunity-load
+	@echo "====================================================="
+
 gh-transform-and-load:
 	@echo "=> Transforming and loading GitHub data into the database"
 	@echo "====================================================="
