--- a/analytics/local.env
+++ b/analytics/local.env
@@ -52,3 +52,9 @@ LOG_FORMAT=human-readable
 
 # Change the message length for the human readable formatter
 # LOG_HUMAN_READABLE_FORMATTER__MESSAGE_WIDTH=50
+
+############################
+# S3
+############################
+
+LOAD_OPPORTUNITY_DATA_FILE_PATH=S3://local-opportunities/public-extracts
