--- a/analytics/pyproject.toml
+++ b/analytics/pyproject.toml
@@ -22,10 +22,11 @@ python = "~3.13"
 slack-sdk = "^3.23.0"
 typer = { extras = ["all"], version = "^0.15.0" }
 sqlalchemy = "^2.0.30"
-psycopg = ">=3.0.7"
 pydantic-settings = "^2.3.4"
 boto3 = "^1.35.56"
 boto3-stubs = "^1.35.56"
+psycopg = "^3.2.3"
+smart-open = "^7.0.5"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0.0"
@@ -36,6 +37,7 @@ pytest-cov = "^5.0.0"
 ruff = "^0.8.0"
 safety = "^3.0.0"
 types-requests = "^2.32.0.20241016"
+moto = "^5.0.22"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
