--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -28,6 +28,7 @@ flask-cors = "^5.0.0"
 opensearch-py = "^2.5.0"
 pyjwt = "^2.9.0"
 newrelic = "10.3.1"
+jinja2 = ">=3.1.5"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0.0"
