--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -11,9 +11,11 @@ services:
     networks:
       - default
 
-  opensearch-container:
-    image: opensearch-ingest-attachment
-    container_name: opensearch-container
+  opensearch-node:
+    build:
+      context: .
+      dockerfile: Dockerfile_opensearch
+    container_name: opensearch-node
     environment:
       - cluster.name=opensearch-cluster # Name the cluster
       - node.name=opensearch-node # Name the node that will run in this container
@@ -45,7 +47,7 @@ services:
     expose:
       - "5601" # Expose port 5601 for web access to OpenSearch Dashboards
     environment:
-      - 'OPENSEARCH_HOSTS=["http://opensearch-container:9200"]'
+      - 'OPENSEARCH_HOSTS=["http://opensearch-node:9200"]'
       - DISABLE_SECURITY_DASHBOARDS_PLUGIN=true # disables security dashboards plugin in OpenSearch Dashboards
     networks:
       - default
@@ -101,7 +103,7 @@ services:
       - .:/api
     depends_on:
       - grants-db
-      - opensearch-container
+      - opensearch-node
       - localstack
       - mock-oauth2-server
     networks:
