[Issue #3312] delete cd-*-infra workflows (#3389)
## Summary

Fixes #3312

### Time to review: __2 mins__

## Context

I realized recently that race conditions from the regular deploys and
the infra deploys would reliably cause problems. So I wondered, why
would platform do this? How have they solve it? Well... platform doesn't
have `infra` deploys that are separate from the application deploys.
Which sounds like a reasonable solution this problem I guess. So that's
the solution I'm going with.

--- a/.github/workflows/cd-frontend.yml
+++ b/.github/workflows/cd-frontend.yml
@@ -7,6 +7,7 @@ on:
       - "main"
     paths:
       - "frontend/**"
+      - "infra/frontend/**"
   release:
     types: [published]
   workflow_dispatch:
