--- a/.github/workflows/cd-analytics.yml
+++ b/.github/workflows/cd-analytics.yml
@@ -7,6 +7,7 @@ on:
       - "main"
     paths:
       - "analytics/**"
+      - "infra/analytics/**"
   release:
     types: [published]
   workflow_dispatch:
