--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -29,6 +29,8 @@ opensearch-py = "^2.5.0"
 pyjwt = "^2.9.0"
 newrelic = "10.4.0"
 jinja2 = ">=3.1.5"
+tenacity = "^8.0"
+
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0.0"
