--- a/api/opensearch/Dockerfile
+++ b/api/opensearch/Dockerfile
@@ -4,5 +4,6 @@
 FROM opensearchproject/opensearch:latest
 
 # Install the Ingest Attachment plugin
+# This image is only used for local development
 RUN /usr/share/opensearch/bin/opensearch-plugin install --batch ingest-attachment
 
