[Issue 3270] opensearch plugin (#3378)
## Summary
Fixes #{[3270](https://github.com/HHS/simpler-grants-gov/issues/3270)}

### Time to review: __5 mins__

## Changes proposed
<img width="1710" alt="Screenshot 2024-12-31 at 10 29 00 AM"
src="https://github.com/user-attachments/assets/dae20981-52b7-4846-ab2b-61cc7518ce4b"
/>

Dockerfile For Opensearch with attachment plugin
Updated docker compose to use Dockerfile to build image

--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -12,7 +12,9 @@ services:
       - default
 
   opensearch-node:
-    image: opensearchproject/opensearch:latest
+    build:
+      context: .
+      dockerfile: opensearch/Dockerfile
     container_name: opensearch-node
     environment:
       - cluster.name=opensearch-cluster # Name the cluster
