--- a/analytics/local.env
+++ b/analytics/local.env
@@ -31,7 +31,7 @@ MB_DB_PASS=secret123
 MB_DB_HOST=grants-analytics-db
 
 ###########################
-# Token Configuration   #
+# Secret Configuration   #
 ###########################
 # Do not add these values to this file
 # to avoid mistakenly committing them.
