--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -32,4 +32,4 @@ USE_SEARCH_MOCK_DATA=false
 NEW_RELIC_APP_NAME=
 NEW_RELIC_LICENSE_KEY=
 
-# SESSION_SECRET=extraSecretSessionSecretValueSssh
+SESSION_SECRET=extraSecretSessionSecretValueSssh
