--- a/.github/workflows/cd-api.yml
+++ b/.github/workflows/cd-api.yml
@@ -5,7 +5,9 @@ on:
   push:
     branches:
       - "main"
+      - "kai/platform-deploy"
     paths:
+      - ".github/**"
       - "api/**"
       - "infra/api/**"
   release:
