--- a/.github/workflows/cd-api.yml
+++ b/.github/workflows/cd-api.yml
@@ -23,6 +23,10 @@ on:
           - dev
           - staging
           - prod
+      version:
+        required: true
+        default: "main"
+        description: Tag or branch or SHA to deploy
 
 jobs:
   api-checks:
@@ -47,6 +51,7 @@ jobs:
     with:
       app_name: "api"
       environment: ${{ matrix.envs }}
+      version: ${{ inputs.version || 'main' }}
 
   send-slack-notification:
     if: failure()
