--- a/.github/workflows/cd-frontend.yml
+++ b/.github/workflows/cd-frontend.yml
@@ -21,6 +21,10 @@ on:
           - dev
           - staging
           - prod
+      version:
+        required: true
+        default: "main"
+        description: Tag or branch or SHA to deploy
 
 jobs:
   frontend-checks:
@@ -45,6 +49,7 @@ jobs:
     with:
       app_name: "frontend"
       environment: ${{ matrix.envs }}
+      version: ${{ inputs.version || 'main' }}
 
   send-slack-notification:
     if: failure()
