updates terraform conf, adds version fallback for prod releases

--- a/.github/workflows/cd-api.yml
+++ b/.github/workflows/cd-api.yml
@@ -51,7 +51,7 @@ jobs:
     with:
       app_name: "api"
       environment: ${{ matrix.envs }}
-      version: ${{ inputs.version || 'main' }}
+      version: ${{ inputs.version || github.ref }}
 
   send-slack-notification:
     if: failure()
