--- a/.github/workflows/cd-analytics.yml
+++ b/.github/workflows/cd-analytics.yml
@@ -50,7 +50,7 @@ jobs:
     with:
       app_name: "analytics"
       environment: ${{ matrix.envs }}
-      version: ${{ inputs.version || 'main' }}
+      version: ${{ inputs.version || github.ref }}
 
   send-slack-notification:
     if: failure()
