[Issue #3160] Configure analytics extract jobs

--- a/analytics/local.env
+++ b/analytics/local.env
@@ -57,4 +57,4 @@ LOG_FORMAT=human-readable
 # S3
 ############################
 
-LOAD_OPPORTUNITY_DATA_FILE_PATH=S3://local-opportunities/public-extracts
+API_ANALYTICS_DB_EXTRACTS_PATH=/tmp
