--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,7 @@
     "@newrelic/next": "^0.10.0",
     "@next/third-parties": "^15.1.4",
     "@opentelemetry/api": "^1.8.0",
-    "@trussworks/react-uswds": "^9.1.1",
+    "@trussworks/react-uswds": "github:trussworks/react-uswds#58f3089739ac5ee415c11cfbe179daad7a62597",
     "@uswds/uswds": "^3.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
@@ -50,6 +50,16 @@
     "server-only": "^0.0.1",
     "sharp": "^0.33.0",
     "zod": "^3.23.8"
+  },
+  "overrides": {
+    "@types/react": "^19"
+  },
+  "compilerOptions": {
+    "paths": {
+      "react": [
+        "node_modules/@types/react"
+      ]
+    }
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
