--- a/api/local.env
+++ b/api/local.env
@@ -108,6 +108,7 @@ IS_LOCAL_AWS=1
 # Feature Flags
 ############################
 ENABLE_OPPORTUNITY_LOG_MSG=false
+ENABLE_OPPORTUNITY_ATTACHMENT_PIPELINE=true
 
 ############################
 # Endpoint Configuration
