--- a/analytics/local.env
+++ b/analytics/local.env
@@ -31,7 +31,7 @@ MB_DB_PASS=secret123
 MB_DB_HOST=grants-analytics-db
 
 ###########################
-# Slack Configuration   #
+# Secret Configuration   #
 ###########################
 # Do not add these values to this file
 # to avoid mistakenly committing them.
@@ -39,6 +39,7 @@ MB_DB_HOST=grants-analytics-db
 # by doing `export ANALYTICS_REPORTING_CHANNEL_ID=whatever`
 ANALYTICS_REPORTING_CHANNEL_ID=DO_NOT_SET_HERE
 ANALYTICS_SLACK_BOT_TOKEN=DO_NOT_SET_HERE
+GH_TOKEN=DO_NOT_SET_HERE
 
 ############################
 # Logging
