--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,9 +31,9 @@
   },
   "dependencies": {
     "@newrelic/next": "^0.10.0",
-    "@next/third-parties": "^14.3.0-canary.59",
+    "@next/third-parties": "^15.1.4",
     "@opentelemetry/api": "^1.8.0",
-    "@trussworks/react-uswds": "^9.1.0",
+    "@trussworks/react-uswds": "github:trussworks/react-uswds#58f3089739ac5ee415c11cfbe179daad7a62597",
     "@uswds/uswds": "^3.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
@@ -43,25 +43,24 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "newrelic": "^12.7.0",
-    "next": "^14.2.3",
+    "next": "^15.1.4",
     "next-intl": "^3.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
-    "sharp": "^0.33.0",
+    "sharp": "^0.33.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
     "@playwright/test": "^1.44.0",
-    "@storybook/addon-designs": "^8.0.4",
-    "@storybook/addon-essentials": "^8.4.2",
-    "@storybook/nextjs": "^8.4.2",
-    "@storybook/react": "^8.4.2",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/nextjs": "^8.4.7",
+    "@storybook/react": "^8.4.7",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest-axe": "^3.5.5",
     "@types/js-cookie": "^3.0.6",
@@ -69,8 +68,8 @@
     "@types/newrelic": "^9.14.6",
     "@types/node": "^22.10.5",
     "@types/node-fetch": "^2.6.11",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^19",
+    "@types/react-dom": "^19.0.0",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "eslint": "^8.36.0",
@@ -90,7 +89,7 @@
     "postcss-loader": "^7.1.0",
     "postcss-preset-env": "^8.0.1",
     "prettier": "^3.2.5",
-    "sass": "^1.59.3",
+    "sass": "^1.77.0",
     "sass-loader": "^13.2.0",
     "storybook": "^8.4.2",
     "style-loader": "^3.3.2",
