--- a/.template-infra/base.yml
+++ b/.template-infra/base.yml
@@ -1,3 +1,3 @@
-_commit: 929a959
+_commit: platform-cli-migration/v0.4.0
 _src_path: https://github.com/navapbc/template-infra
-app_name: template-only
+template: base
