--- a/.template-infra/base.yml
+++ b/.template-infra/base.yml
@@ -1,3 +1,4 @@
-_commit: platform-cli-migration/v0.4.0
+# Changes here will be overwritten by Copier
+_commit: platform-cli-migration/v0.7.0
 _src_path: https://github.com/navapbc/template-infra
 template: base
