--- a/.template-infra/app-analytics.yml
+++ b/.template-infra/app-analytics.yml
@@ -1,4 +1,5 @@
-_commit: platform-cli-migration/v0.4.0
+# Changes here will be overwritten by Copier
+_commit: platform-cli-migration/v0.7.0
 _src_path: https://github.com/navapbc/template-infra
 app_name: analytics
 template: app
