--- a/.github/workflows/ci-frontend-e2e.yml
+++ b/.github/workflows/ci-frontend-e2e.yml
@@ -46,8 +46,9 @@ jobs:
       - name: Start API Server for e2e tests
         run: |
           cd ../api
+          make init db-seed-local populate-search-opportunities start
+          echo "LOGIN_FINAL_DESTINATION=http://localhost:3000/api/auth/callback" >> override.env
           echo "ENABLE_OPPORTUNITY_ATTACHMENT_PIPELINE=false" >> override.env
-          make init db-seed-local populate-search-opportunities start &
           cd ../frontend
           # Ensure the API wait script is executable
           chmod +x ../api/bin/wait-for-api.sh
@@ -56,6 +57,7 @@ jobs:
 
       - name: Build a prod version of the site
         run: |
+          sed -En '/API_JWT_PUBLIC_KEY/,/-----END PUBLIC KEY-----/p' ../api/override.env >> .env.local
           cat .env.development >> .env.local
           npm run build -- --no-lint
 
