--- a/api/local.env
+++ b/api/local.env
@@ -150,3 +150,5 @@ DEPLOY_GITHUB_REF=main
 DEPLOY_GITHUB_SHA=ffaca647223e0b6e54344122eefa73401f5ec131
 DEPLOY_TIMESTAMP=2024-12-02T21:25:18Z
 DEPLOY_WHOAMI=local-developer
+
+CDN_URL=http://localhost:4566/local-mock-public-bucket
